# Carbon-Footprint-Awareness-Platform

./: .gitignore  ARCHITECTURE.md  DEMO.md  DEVELOPMENT.md  IMPROVEMENTS.md  LICENSE  PROJECT_SUMMARY.sh  QUICKSTART.md  README.md  SUBMISSION.md  generate_codes_md.py  setup.bat  setup.sh  verify.sh
backend/: .env.example  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  carbon_engine.py  config.py  config_v2.py  database.py  dependencies.py  gemini_ai.py  main.py  models.py  rate_limit.py  recommendations.py  security.py  text_extraction.py
backend/app/routers/: calculator.py  chat.py  pledges.py  what_if.py
backend/tests/: test_api.py  test_carbon_engine.py  test_models.py  test_rate_limit.py  test_recommendations.py  test_security.py  test_security_headers.py  test_text_extraction.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/__tests__/: App.test.jsx  AppContext.test.jsx  Calculator.test.jsx  Dashboard.test.jsx  EmissionCard.test.jsx  api.test.jsx
frontend/src/components/: Calculator.jsx  ChatInterface.jsx  Dashboard.jsx  EmissionCard.jsx  FormError.jsx  IntroPage.jsx  WhatIfSimulator.jsx
frontend/src/constants/: defaults.js
frontend/src/context/: AppContext.jsx
frontend/src/services/: api.js
